Fixed bug where form text boxes overhang the form on smaller screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -277,6 +277,14 @@ h3 {
         width: 80%;
     }
 
+    .form-text-box {
+        width: 80%;
+    }
+
+    .contact-us-dropdown {
+        width: 75%;
+    }
+
 }
 
 
